# STL-manager

./: .coverage  .gitignore  API_SPEC.md  CHANGELOG.md  CONFIG.example.yaml  DECISIONS.md  DesiredFeatures.md  LICENSE  MetadataFields.md  NormalizationFlow.md  PLANNING.md  README.md  alembic.ini  codex_units_w40k.md  designers_tokenmap.md  match_proposals.json  match_proposals_v2.json  match_proposals_v3.json  pyproject.toml  pytest.ini  quick_scan_report.json  requirements-dev.txt  requirements.txt  tokenmap.md
.pytest-tmp/: sample_inventory.json
alembic/: env.py  script.py.mako
api/: README.md  main.py
db/: __init__.py  models.py  session.py
docs/: API_SPEC.md  ARCHITECTURE.md  CHATMODE.md  CLI_REFERENCE.md  CODEBASE_REVIEW.md  DesiredFeatures.md  FIX_PLAN.md  FRONTEND_PLAN.md  FolderStructure_Model_Files.md  FranchiseEnrichment.md  HH_NEXT_STEPS.md  MetadataFields.md  NormalizationFlow.md  PLANNING.md  PROGRESS.md  PROPOSAL_collections_ssot.md  PROPOSAL_entity_linking_and_tokenization.md  PROPOSAL_multilingual_filenames.md  PYTHON_CHEATSHEET.md  REACT_CHEATSHEET.md  REPO_CONTENTS.md  RESOURCES.md  SCHEMA_codex_and_linking.md  SCRIPTS_ORGANIZATION.md  SCRIPTS_SHIMS_MIGRATION_PLAN.md  SCRIPTS_WORKFLOW_TEST_PLAN.md  TECH_STACK_PROPOSAL.md  UI_Grid_Design_Guide.md  UI_Styling_OrnateFrames.md  UI_Vision.md  WORKFLOW_TESTS.md  franchise_character_proposals.md
prompts/: bernadette_banner_style_prompt.txt
reports/: apply_proposals_round1.txt  apply_proposals_round2.txt  backfill_kits.json  backfill_kits_20250830_212157_apply.json  backfill_kits_apply.json  backfill_kits_apply_infernus.json  backfill_kits_apply_infernus_v2.json  backfill_kits_apply_infernus_v3.json  backfill_kits_apply_v2.json  backfill_kits_dryrun.json  backfill_kits_terminator_dryrun.json  backfill_kits_terminator_dryrun_head.json  backfill_kits_v2.json  codex_unit_name_candidates_20250824_190229.json  create_missing_franchises_apply.txt  create_missing_franchises_dryrun.txt  export_codex_candidates_20250824_210229.txt  find_vocab_matches_all_unassigned.json  (+99 more)
(+774 files in other folders)
